# test_click_crm

./: .gitignore  README.rst  pyproject.toml
src/bot/: __main__.py  config.py
src/bot/app/: answers.py  bot.py
src/crm/: __main__.py  app.py  database.py  settings.py  tables.py
src/crm/api/: __init__.py  auth.py  client.py  client_request.py  requests_type.py  staff.py  status.py
src/crm/models/: auth.py  client.py  client_request.py  person.py  requests_type.py  staff.py  status.py
src/crm/services/: auth.py  client.py  client_request.py  requests_type.py  staff.py  status.py
